--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -19,9 +19,15 @@
                         <%= product.title %>
                       </h3>
                       <p class="text-small">
+                        <% if product.reviews.present? %>
                         <span class="rating-star">
-                          <i class="star-actived rate-[ここに評価を表示]0"></i>
+                          <i class="star-actived rate-<%= product.reviews.average(:rate).round %>0"></i>
                         </span>
+                        <% else %>
+                        <span class="rating-star">
+                          <i class="star-actived tate-0"></i>
+                        </span>
+                        <% end %>
                       </p>
                     </div>
                   </li>
